--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,12 +12,13 @@ bench=false
 
 [dependencies]
 unicorn-engine = "2.1.1"
-libafl = { version = "*"}
-libafl_targets = {version = "*"}
-libafl_bolts = {version = "*"}
+libafl = { version = "0.13.2"}
+libafl_targets = {version = "0.13.2"}
+libafl_bolts = {version = "0.13.2"}
 clap = { version = "4.0", features = ["derive"] }
 ratatui = "0.28.0"
 crossterm = "*"
+serde = "*"
 
 [build-dependencies]
 pkg-config = "0.3.16"
